fix: draw display format and restricted reset (only after conclusion)